---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(& context, i32_type, block).as_operation()"
snapshot_kind: text
---
module {
  func.func @test_func(%arg0: i32) {
    %0 = "wasm.global_get"(%arg0) : (i32) -> i32
  }
}
